--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -35,4 +35,4 @@ jobs:
           git config --global user.email "nikoladzajevickg@gmail.com"
           git add README.md
           git commit -m "Updated Bitcoin price in README"
-          git push
+          git push https://github-actions:${{ secrets.GH_TOKEN }}@github.com/dzaja123/daily-btc-price-gitHub-actions-workflow.git
