--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,8 @@ name: Update Bitcoin Price in README
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight UTC
+    - cron: "0 */6 * * *"  # Runs every 6 hours at the top of the hour (UTC)
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -35,4 +36,4 @@ jobs:
           git config --global user.email "nikoladzajevickg@gmail.com"
           git add README.md
           git commit -m "Updated Bitcoin price in README"
-          git push https://github-actions:${{ secrets.GH_TOKEN }}@github.com/dzaja123/daily-btc-price-gitHub-actions-workflow.git
+          git push https://github-actions:$GH_TOKEN@github.com/dzaja123/daily-btc-price-gitHub-actions-workflow.git
